add async js load, not done

--- a/demo/loader.html
+++ b/demo/loader.html
@@ -10,7 +10,7 @@
                 a: 124
             };
         });
-        module('b', function () {
+        module('b', 'c', function () {
             return {
                 a: 124
             };
