--- a/demo/loader.html
+++ b/demo/loader.html
@@ -22,7 +22,7 @@
                 a: 'a'
             };
         });
-        module('b', 'd', function () {
+        module('b', 'c', function () {
             return {
                 a: 'b'
             };
