更多强大功能更新
# module 的 deps 使用 []
# require 的返回值受 module 调用中的 init 控制，如果 init 返回函数或者
  返回对象的 __only 为 true，那么直接用 init 的返回值作为 require 结果
# module 的 init 接收 mod 参数
# module 支持 embed
  module('a', ['b'], function (mod) {
    mod.embed('m.css') -> get content of file /path/to/a_m.css
  }, {embed: ['m.css', 'item.mu', 'i.gif|base64']});
  开发阶段直接 ajax load 编译后变成
  module('a', ['b'], function (mod) {
    mod.embed('m.css') -> get content of file /path/to/a_m.css
  }, {_embed: {'m.css': '', 'item.mu': '', 'i.gif': null}});

--- a/demo/loader.html
+++ b/demo/loader.html
@@ -17,12 +17,12 @@
             _log(require('jquery').jquery);
             _log('load done',  +new Date() - t1);
         });
-        module('a', 'c', 'b', function () {
+        module('a', ['c', 'b'], function () {
             return {
                 a: 'a'
             };
         });
-        module('b', 'c', function () {
+        module('b', ['d'], function () {
             return {
                 a: 'b'
             };
