给 require 的 callback 自动初始化模块遇到困境

--- a/demo/loader.html
+++ b/demo/loader.html
@@ -15,7 +15,7 @@
             _log(require('a').a);
             _log(require('b').a);
             _log(require('jquery').jquery);
-            _log('load done',  +new Date() - t1);
+            _warn('load done',  +new Date() - t1);
         });
         module('a', ['c', 'b'], function () {
             return {
